--- a/deploy/i18n/zh.json
+++ b/deploy/i18n/zh.json
@@ -1,10 +1,6 @@
 {
-  "app.title": "神经形态视觉处理",
-  "events.processing": "正在处理事件",
-  "camera.connected": "相机已连接",
-  "camera.disconnected": "相机已断开",
-  "error.processing": "处理错误发生",
-  "success.detection": "物体检测成功",
-  "status.healthy": "系统健康",
-  "status.degraded": "系统性能下降"
+  "app_name": "尖峰SNN事件视觉套件",
+  "welcome_message": "欢迎使用神经形态视觉处理",
+  "processing_status": "正在处理事件...",
+  "error_message": "处理过程中发生错误"
 }
