--- a/deploy/i18n/en.json
+++ b/deploy/i18n/en.json
@@ -1,10 +1,6 @@
 {
-  "app.title": "Neuromorphic Vision Processing",
-  "events.processing": "Processing events",
-  "camera.connected": "Camera connected",
-  "camera.disconnected": "Camera disconnected",
-  "error.processing": "Processing error occurred",
-  "success.detection": "Object detection successful",
-  "status.healthy": "System healthy",
-  "status.degraded": "System performance degraded"
+  "app_name": "Spike SNN Event Vision Kit",
+  "welcome_message": "Welcome to neuromorphic vision processing",
+  "processing_status": "Processing events...",
+  "error_message": "An error occurred during processing"
 }
